# reportinator_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  grcov.yml  prometheus.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: publish-docker-image.yml  rust.yml
config/: settings.yml
src/: actors.rs  adapters.rs  config.rs  domain_objects.rs  lib.rs  main.rs  service_manager.rs
src/actors/: event_enqueuer.rs  gift_unwrapper.rs  log_actor.rs  messages.rs  private_dm_parser.rs  relay_event_dispatcher.rs  slack_writer.rs  supervisor.rs  test_actor.rs  utilities.rs
src/actors/utilities/: output_port_subscriber.rs  test_actor.rs
src/adapters/: google_publisher.rs  http_server.rs  nostr_service.rs  nostr_subscriber.rs  slack_client_adapter.rs
src/adapters/http_server/: app_errors.rs  router.rs  slack_interactions_route.rs
src/config/: reportinator.rs
src/domain_objects/: as_gift_wrap.rs  gift_wrap.rs  moderated_report.rs  moderation_category.rs  report_request.rs
templates/: root.hbs
