[package]
name = "reportinator_server"
version = "0.1.0"
edition = "2021"
default-run = "reportinator_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
env_logger = "0.11.3"
futures = "0.3.30"
gcloud-sdk = { version = "0.24.5", features = ["google-pubsub-v1"] }
handlebars = "5.1.2"
http-body-util = "0.1.1"
hyper = "1.2.0"
libc = "0.2.153"
log = "0.4.21"
metrics = "0.22.3"
metrics-exporter-prometheus = "0.14.0"
nostr-sdk = "0.30.0"
ractor = {git = "https://github.com/slawlor/ractor", rev = "26a01d69e1d83a6d6f1cfcda668acb6deee74b13" }
regex = "1.10.4"
reqwest = "0.12.3"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.115"
slack-morphism = { version = "2.1.0", features = ["axum"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["timeout", "trace"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "reportinator_server"
path = "src/main.rs"

[[bin]]
name = "giftwrapper"
path = "src/bin/giftwrapper.rs"

[dev-dependencies]
pretty_assertions = "1.4.0"
