[package]
name = "reportinator_server"
version = "0.1.0"
edition = "2021"
default-run = "reportinator_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
clap = "4.5.4"
config_rs = { version = "0.14", package = "config", features = ["yaml"] }
env_logger = "0.11.3"
futures = "0.3.30"
gcloud-sdk = { version = "0.25.1", features = ["google-pubsub-v1"] }
handlebars = "5.1.2"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["http2", "http1"] }
hyper-rustls = "0.26"
hyper-util = { version = "0.1.5", features = ["http2", "http1", "full"] }
libc = "0.2.155"
log = "0.4.21"
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.0"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr.git", ref = "d244d10f53bf0ad2a1e84fffdf658c84d7bcce0c" }
ractor = { git = "https://github.com/planetary-social/ractor.git", branch = "output_ports" }
regex = "1.10.6"
reqwest = "0.12.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
slack-morphism = { version = "2.2.0", features = ["axum"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["timeout", "trace"] }
tower-layer = "0.3.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = "reportinator_server"
path = "src/main.rs"

[[bin]]
name = "giftwrapper"
path = "src/bin/giftwrapper.rs"

[dev-dependencies]
pretty_assertions = "1.4.0"
